Guard against giving out only broken tracks in RandomTrackNavigators

Related to fixes done to NonLinearNavigator.cpp in a previous commit. Provide equal
or even redundant functionality, but both should probably remain as the changes in
NonLinearNavigator also affect e.g. RandomAlbumNavigators, to which this kind of quite
direct safeguardings are not maybe the way to go.

BUG: 438651